Blazor_Project_end

--- a/WebLucky_Client/Pages/Authentication/Login.razor
+++ b/WebLucky_Client/Pages/Authentication/Login.razor
@@ -24,7 +24,7 @@
                         </div>
                         <div class="py-2">
                             <button type="submit" class="btn btn-success btn-block"><i class="bi bi-person-bounding-box"></i> Sign in</button>
-                            <a href="/registration" class="btn btn-primary text-white m-2"><i class="bi bi-person-plus-fill"></i> Register as a new user</a>
+                            <a href="@($"{SD.PAGE_CLIENT}/register")" class="btn btn-primary text-white m-2"><i class="bi bi-person-plus-fill"></i> Register as a new user</a>
                         </div>
                     </div>
                 </div>
