--- a/WebLucky_Serwer/Pages/Product/ProductPrice.razor
+++ b/WebLucky_Serwer/Pages/Product/ProductPrice.razor
@@ -1,40 +1,38 @@
 ﻿@page "/product/price/{Id:int}"
 @inject IProductRepository _productRepository
 @inject IProductPriceRepository _productPriceRepository
-@attribute [Authorize]
+@attribute [Authorize(Roles = SD.Role_Admin)]
 
-<h3 class="card-title text-primary mb-3 ml-3">Product Price Managment</h3>
+<ToastMudComponent Open="@Open" Message="@Message" Alert="@Alert" Toggle="@(()=>{Open = false; Alert = ""; Message = "";})" />
 @if (IsLoading)
 {
-    <div class="text-center offset-6">
-        <div class="spinner">
-            <div> </div>
-            <div> </div>
-            <div> </div>
-            <div> </div>
-            <div> </div>
-            <div> </div>
-            <div> </div>
-            <div> </div>
-            <div> </div>
-            <div> </div>
-        </div>
+    <div class="container1">
+        <div class="spinner"></div>
     </div>
 }
 else
 {
-    <div class="row border p-2 mb-4">
-        <div class="col-11">
-            <div class="card-body">
-                <h4>@Product.Name</h4>
-                <span>Category : @Product.Category.Name</span> <br />
-                Description : <span>@((MarkupString)Product.Description)</span>
-            </div>
-        </div>
-        <div class="col-1">
-            <img src="@Product.ImageUrl" class="w-100">
-        </div>
-    </div>
+    <MudContainer Class="mt-4 mb-4 ml-0">
+        <MudGrid>
+            <MudItem xs="12">
+                <MudText Typo="Typo.h4">Product Price</MudText>
+            </MudItem>
+        </MudGrid>
+    </MudContainer>
+    <MudCard>
+        <MudCardContent>
+            <MudGrid Class="pl-3 pr-3">
+                <MudItem xs="12" md="10">
+                    <MudText Typo="Typo.h5">@Product.Name</MudText>
+                    <MudText Typo="Typo.subtitle1">Category : @Product.Category.Name</MudText>
+                    <MudText Typo="Typo.subtitle1">Description : @((MarkupString)Product.Description)</MudText>
+                </MudItem>
+                <MudItem xs="12" md="2" Class="d-flex justify-content-center align-items-center">
+                    <MudImage Src="@($"{SD.PAGE_SERVER}/images/product/{Product.ImageUrl}")" Width="150" Class="rounded-lg" />
+                </MudItem>
+            </MudGrid>
+        </MudCardContent>
+    </MudCard>
     <SfGrid DataSource="@ProductPrices" AllowPaging="true" AllowFiltering="true" AllowSorting="true" Toolbar="@(new List<string>() { "Add", "Edit", "Delete", "Update", "Cancel" })" @ref="productPriceGrid">
         <GridEvents OnActionBegin="ActionBeginHandler" TValue="ProductPriceDTO"></GridEvents>
         <GridEditSettings AllowAdding="true" AllowEditing="true" AllowDeleting="true"></GridEditSettings>
@@ -69,15 +67,17 @@ else
 @code {
     [Parameter]
     public int Id { get; set; }
-
     private bool IsLoading { get; set; } = true;
     public SfGrid<ProductPriceDTO> productPriceGrid;
     private ProductDTO Product { get; set; } = new();
     private IEnumerable<ProductPriceDTO> ProductPrices { get; set; } = new List<ProductPriceDTO>();
     IEnumerable<String> SizeList = new List<String>()
     {
-        "Small","Medium","Large","8oz","16oz","24oz"
+        "Small","Medium","Large"
     };
+    public bool Open { get; set; }
+    public string? Alert { get; set; }
+    public string? Message { get; set; }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
@@ -98,12 +98,18 @@ else
             args.Data.ProductId = Id;
             if (args.Action == "Add")
             {
+                Open = true;
+                Alert = "Success";
+                Message = "สร้างรายละเอียดผลิตภัณฑ์สำเร็จแล้ว";
                 await _productPriceRepository.Create(args.Data);
                 ProductPrices = await _productPriceRepository.GetAll(Id);
                 await productPriceGrid.Refresh();
             }
             if (args.Action == "Edit")
             {
+                Open = true;
+                Alert = "Success";
+                Message = "อัปเดตรายละเอียดผลิตภัณฑ์สำเร็จแล้ว";
                 await _productPriceRepository.Update(args.Data);
             }
         }
