--- a/WebLucky_Serwer/Shared/MainLayout.razor
+++ b/WebLucky_Serwer/Shared/MainLayout.razor
@@ -1,23 +1,33 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>WebLucky_Serwer</PageTitle>
-
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <LoginDisplay></LoginDisplay>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
-
 <MudThemeProvider />
 <MudDialogProvider />
 <MudSnackbarProvider />
+
+<MudLayout>
+    <MudAppBar Color="Color.Dark">
+        <MudIconButton Style="color: #EDE7F6;" Icon="@Icons.Material.Filled.Menu" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
+        <MudItem xs="12" sm="6" md="4" lg="9">
+            <MudText Typo="Typo.h6">MENU</MudText>
+        </MudItem>
+        <MudItem xs="12" sm="6" md="4" lg="3">
+            <LoginDisplay />
+        </MudItem>
+    </MudAppBar>
+    <MudDrawer @bind-Open="@_drawerOpen">
+        <NavMenu />
+    </MudDrawer>
+    <MudMainContent>
+        @Body
+    </MudMainContent>
+</MudLayout>
+
+@code {
+    bool _drawerOpen = false;
+
+    void DrawerToggle()
+    {
+        _drawerOpen = !_drawerOpen;
+    }
+}
+
