--- a/WebLucky_Client/Pages/CartDetails/OrderConfirmation.razor
+++ b/WebLucky_Client/Pages/CartDetails/OrderConfirmation.razor
@@ -19,7 +19,7 @@
                     <p>Your order has been placed successfully with order id : @Order.OrderHeader.Id</p>
                 </div>
                 <div class="col-8 offset-2">
-                    <img src="/images/confirmation.jpg" width="100%" style="border-radius:30px;" />
+                    <img src="@($"{SD.PAGE_CLIENT}/images/confirmation.jpg")" width="100%" style="border-radius:30px;" />
                 </div>
             </div>
         }
@@ -31,7 +31,7 @@
                     <p>Your order had payment issue please contact us with Order ID:  @Order.OrderHeader.Id</p>
                 </div>
                 <div class="col-8 offset-2">
-                    <img src="/images/confirmation.jpg" width="100%" style="border-radius:30px;" />
+                    <img src="@($"{SD.PAGE_CLIENT}/images/confirmation.jpg")" width="100%" style="border-radius:30px;" />
                 </div>
             </div>
         }
