--- a/WebLucky_Client/Shared/MainLayout.razor
+++ b/WebLucky_Client/Shared/MainLayout.razor
@@ -1,5 +1,9 @@
 ﻿@inherits LayoutComponentBase
 
+<MudThemeProvider />
+<MudDialogProvider />
+<MudSnackbarProvider />
+
 <NavMenu />
 <div class="main">
     @Body
