--- a/WebLucky_Client/Shared/NavMenu.razor
+++ b/WebLucky_Client/Shared/NavMenu.razor
@@ -2,21 +2,21 @@
 @inject ICartService _cartService
 @implements IDisposable
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Tangy</a>
+        <a class="navbar-brand" href="@($"{SD.PAGE_CLIENT}/")">Sumo Blazor</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item p-0">
-                    <NavLink class="nav-link" href="/">
-                        <span aria-hidden="true"></span> Home
+                    <NavLink class="nav-link" href="@($"{SD.PAGE_CLIENT}/")" style="margin-right: 10px;">
+                        <MudIcon Icon="@Icons.Material.Filled.Home" aria-hidden="true" />
                     </NavLink>
                 </li>
                 <li class="nav-item p-0">
-                    <NavLink class="nav-link" href="/cart">
+                    <NavLink class="nav-link" href="@($"{SD.PAGE_CLIENT}/cart")">
                         <span class="p-2"><i class="bi bi-cart"></i> (@GetCartCount())</span>
                     </NavLink>
                 </li>
@@ -28,7 +28,7 @@
                             <li class="nav-item p-0">
                                 <NavLink class="nav-link" href="#">
                                     <span class="p-2">
-                                        Hello, @context.User.Identity.Name
+                                        @context.User.Identity.Name
                                     </span>
                                 </NavLink>
                             </li>
@@ -56,7 +56,6 @@
                                 </NavLink>
                             </li>
                         </NotAuthorized>
-
                     </AuthorizeView>
                 </ul>
             </form>
@@ -64,13 +63,22 @@
     </div>
 </nav>
 
+<style>
+    #navbar {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 1030;
+    }
+</style>
+
 @code
 {
     protected override void OnInitialized()
     {
         _cartService.OnChange += StateHasChanged;
     }
-    public void Dispose() //เมื่อออกจากคอมโพเน้นต์ ให้ยกเลิกเหตการณ์
+    public void Dispose()
     {
         _cartService.OnChange -= StateHasChanged;
     }
@@ -78,6 +86,6 @@
     private string GetCartCount()
     {
         var cart = _localStorage.GetItem<List<ShoppingCart>>(SD.ShoppingCart);
-        return cart == null ? "0" : $"มีสินค้า {cart.Count} รายการ | จำนวน {cart.Sum(s => s.Count)} ชิ้น";
+        return cart == null ? "0" : $"{cart.Count}";
     }
 }
