--- a/WebLucky_Client/_Imports.razor
+++ b/WebLucky_Client/_Imports.razor
@@ -15,3 +15,5 @@
 @using Tangy_Common
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Authorization
+@using MudBlazor
+@using System.Security.Claims
