--- a/WebLucky_Serwer/Pages/Order/OrderDetails.razor
+++ b/WebLucky_Serwer/Pages/Order/OrderDetails.razor
@@ -1,17 +1,17 @@
 ﻿@page "/order/details/{Id:int}"
 @inject IOrderRepository _orderRepository
-@inject IJSRuntime _jsRuntime
 @attribute [Authorize(Roles = SD.Role_Admin)]
 
+<ToastMudComponent Open="@Open" Message="@Message" Alert="@Alert" Toggle="@(()=>{Open = false; Alert = ""; Message = "";})" />
 @if (IsLoading)
 {
-    <div class="text-center">
-        <img src="/images/loading.gif">
+    <div class="container1">
+        <div class="spinner"></div>
     </div>
 }
 else
 {
-    <div class="container">
+    <div class="container" style="margin-top: 20px">
         <div class="card">
             <div class="card-header bg-dark text-light ml-0">
                 <div class="container row">
@@ -19,7 +19,7 @@ else
                         <i class="fas fa-shopping-cart"></i> &nbsp; Order Summary
                     </div>
                     <div class="col-12 col-md-4 offset-md-2 text-right">
-                        <a href="/orderList" class="btn btn-outline-info form-control btn-sm">Back to Orders</a>
+                        <a href="@($"{SD.PAGE_SERVER}/orderList")" class="btn btn-outline-info form-control btn-sm">Back to Orders</a>
                     </div>
                 </div>
             </div>
@@ -76,30 +76,30 @@ else
                                         <ValidationMessage For="()=>Order.OrderHeader.PostalCode"></ValidationMessage>
                                     </div>
                                 </div>
-                               <div class="row my-1">
-                                   <div class="col-3">Email</div>
-                                   <div class="col-9">
-                                       <input type="text" readonly value="@Order.OrderHeader.Email" class="form-control" />
-                                   </div>
-                               </div>
-                               <div class="row my-1">
-                                   <div class="col-3">Order Date</div>
-                                   <div class="col-9">
-                                       <input type="text" readonly value="@Order.OrderHeader.OrderDate.ToShortDateString()" class="form-control" />
-                                   </div>
-                               </div>
-                               <div class="row my-1">
-                                   <div class="col-3">Carrier</div>
-                                   <div class="col-9">
-                                       <InputText @bind-Value="Order.OrderHeader.Carrier" class="form-control" />
-                                   </div>
-                               </div>
-                               <div class="row my-1">
-                                   <div class="col-3">Tracking</div>
-                                   <div class="col-9">
-                                       <InputText @bind-Value="Order.OrderHeader.Tracking" class="form-control" />
-                                   </div>
-                               </div>
+                                <div class="row my-1">
+                                    <div class="col-3">Email</div>
+                                    <div class="col-9">
+                                        <input type="text" readonly value="@Order.OrderHeader.Email" class="form-control" />
+                                    </div>
+                                </div>
+                                <div class="row my-1">
+                                    <div class="col-3">Order Date</div>
+                                    <div class="col-9">
+                                        <input type="text" readonly value="@Order.OrderHeader.OrderDate.ToShortDateString()" class="form-control" />
+                                    </div>
+                                </div>
+                                <div class="row my-1">
+                                    <div class="col-3">Carrier</div>
+                                    <div class="col-9">
+                                        <InputText @bind-Value="Order.OrderHeader.Carrier" class="form-control" />
+                                    </div>
+                                </div>
+                                <div class="row my-1">
+                                    <div class="col-3">Tracking</div>
+                                    <div class="col-9">
+                                        <InputText @bind-Value="Order.OrderHeader.Tracking" class="form-control" />
+                                    </div>
+                                </div>
                                 @if (Order.OrderHeader.Status != SD.Status_Confirmed && Order.OrderHeader.Status != SD.Status_Pending)
                                 {
                                     <div class="row my-1">
@@ -173,58 +173,64 @@ else
         </div>
     </div>
 }
-
 @code {
     [Parameter]
     public int Id { get; set; } = 0;
-
-    public bool IsLoading { get; set; } = true;
     public OrderDTO Order { get; set; } = new();
+    public bool Open { get; set; }
+    public string? Alert { get; set; }
+    public string? Message { get; set; }
+    public bool IsLoading { get; set; } = true;
+
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if (firstRender)
         {
-            await LoadOrder();
+            IsLoading = true;
+            StateHasChanged();
+            Order = await _orderRepository.Get(Id);
+            IsLoading = false;
+            StateHasChanged();
         }
-    }
-    private async Task LoadOrder()
-    {
-        IsLoading = true;
-        StateHasChanged();
-
-        Order = await _orderRepository.Get(Id);
-
-        IsLoading = false;
-        StateHasChanged();
     }
     private async Task UpdateOrder()
     {
+        Open = true;
+        Alert = "Success";
+        Message = "อัปเดตคำสั่งซื้อเรียบร้อยแล้ว";
         var OrderHeaderDTO = await _orderRepository.UpdateHeader(Order.OrderHeader);
         Order.OrderHeader = OrderHeaderDTO;
-        await _jsRuntime.ToastrSuccess("Order has been updated successfully");
     }
     private async Task ShipOrder()
     {
         if (string.IsNullOrEmpty(Order.OrderHeader.Carrier) || string.IsNullOrEmpty(Order.OrderHeader.Tracking))
         {
-            await _jsRuntime.ToastrError("Please Enter Tracking and Carrier Information");
+            Open = true;
+            Alert = "Warning";
+            Message = "กรุณาป้อนข้อมูล";
             return;
         }
         Order.OrderHeader.Status = SD.Status_Shipped;
+        Open = true;
+        Alert = "Success";
+        Message = "จัดส่งคำสั่งซื้อแล้ว";
         var OrderHeaderDTO = await _orderRepository.UpdateHeader(Order.OrderHeader);
         Order.OrderHeader = OrderHeaderDTO;
-        await _jsRuntime.ToastrSuccess("Order has been Shipped!");
     }
     private async Task CancelOrder()
     {
         Order.OrderHeader = await _orderRepository.CancelOrder(Order.OrderHeader.Id);
         if (Order.OrderHeader.Status == SD.Status_Cancelled)
         {
-            await _jsRuntime.ToastrSuccess("Order has been cancelled successfully");
+            Open = true;
+            Alert = "Success";
+            Message = "ยกเลิกคำสั่งซื้อเรียบร้อยแล้ว";
         }
         if (Order.OrderHeader.Status == SD.Status_Refunded)
         {
-            await _jsRuntime.ToastrSuccess("Order has been cancelled & refunded successfully");
+            Open = true;
+            Alert = "Success";
+            Message = "คำสั่งซื้อถูกยกเลิกและคืนเงินเรียบร้อยแล้ว";
         }
     }
 }
